Finished Final Project
Made it so my add, delete, and update map buttons work properly.

--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -71,6 +71,13 @@ $colors: (
 // default are overridden.
 
 @import "ionic.theme.default";
+$toolbar-md-title-text-color: #fff;
+$toolbar-ios-title-text-color: #fff;
+$toolbar-wp-title-text-color: #fff;
+
+$toolbar-md-title-font-size: 200%;
+$toolbar-ios-title-font-size: 200%;
+$toolbar-wp-title-font-size: 200%;
 
 
 // Ionicons
