--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,35 @@
 page-home {
 
+  ion-title {
+    text-align: center;
+  }
+
+  ion-content{
+
+    background-image: url("../assets/imgs/matrix.jpg");
+    background-position: top;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+
+  .holder {
+    color: #fff;
+    display: flex;
+    height: 100%;
+    justify-content: center;
+    align-items: center;
+
+    .cHolder {
+      margin-top: -100px;
+    }
+
+  }
+
+
+
+  .cont {
+    margin-bottom: 0px;
+  }
+
+
 }
